version 1.1.1
=============
* add copy_message method.
* raise IOError when trying to open a file for reading that doesn't exist.
* use openmb instead of openmg.
* add filterbyreceipt.py utility.
* update BUFRLIB src to v11.3.0.
* add set_param and get_param functions to set/get BUFRLIB internal size 
  parameters.

version 1.1.0
=============
* added bufrdif.py utility.
* ncepbufr.open table kwarg can be an existing ncepbufr.open instance.
* ncepbufr.openmsg now has msg_receipt_time kwarg (YYYYMMDDHHMM).
* added bufrsubset.py (subset bufr file by receipt time).

version 1.0.0
=============
* add function for computing bit flags from integer and mnemonic
* remove GSI diag reader stuff (still in branch gsidiag)

version 0.9.3
=============
* have read_diag return specific humidity in kg/kg (not q/qsat)
* add nc2prepbufr and merge_prepbufrdiag utilities.
* numerous bug fixes.
* add read_diag.diag_rad for reading radiance diag files.

version 0.9.2
=============
* include module for reading GSI diagnostic files for conventional 
  data (read_diag.diag_conv).

10/11/2015: version 0.9.1 (tag v0.9.1rel)
=========================================
* remove -C from CPPFLAGS in src/makebufrlib.sh (pull request #1), 
  otherwise compile failed with cpp version 4.8.
* 'pivot' kwarg to changed to 'rep' in read_subset and write_subset.
* add 'set_missing_value' method.
* rewind method added, aliased to checkpoint.
* reinitialize msg_counter when checkpoint called.
* added utility for converting prepbufr to netcdf (utils/prepbufr2nc).
* add __version__ and __bufrlib_version__ module variables.
* add -fPIC to FFLAGS and CFLAGS in makebufrlib.sh, removed -fdefault-real-8.

9/1/2015:  version 0.9 (tag v0.9rel)
====================================
* first public release. 